--- a/requirements.txt
+++ b/requirements.txt
@@ -1,75 +1,75 @@
-anyio==4.6.2.post1
-attrs==24.2.0
-blinker==1.8.2
+anyio==4.8.0
+attrs==25.1.0
+blinker==1.9.0
 captchascraper==0.0.9
-certifi==2024.8.30
+certifi==2025.1.31
 cffi==1.17.1
 cfscrape==2.1.1
 chardet==5.2.0
-charset-normalizer==3.4.0
-click==8.1.7
+charset-normalizer==3.4.1
+click==8.1.8
 cloudscraper==1.2.71
 colorama==0.4.6
 construct==2.10.70
-cryptography==43.0.1
+cryptography==44.0.2
 dnspython==2.7.0
 dsinternals==1.2.4
 exceptiongroup==1.2.2
-Flask==3.0.3
+Flask==3.1.0
 future==1.0.0
 h11==0.14.0
-httpcore==1.0.6
-httpx==0.27.2
+httpcore==1.0.7
+httpx==0.28.1
 icmplib==3.0.4
 idna==3.10
 impacket==0.12.0
-importlib_metadata==8.5.0
+importlib_metadata==8.6.1
 iniconfig==2.0.0
 ipaddress==1.0.23
 itsdangerous==2.2.0
-Jinja2==3.1.4
+Jinja2==3.1.6
 ldap3==2.9.1
 ldapdomaindump==0.9.4
-MarkupSafe==3.0.1
-maxminddb==2.6.2
+MarkupSafe==3.0.2
+maxminddb==2.6.3
 multidict==6.1.0
 outcome==1.3.0
-packaging==24.1
-pip==24.2
+packaging==24.2
+pip==25.0.1
 pluggy==1.5.0
-propcache==0.2.0
-psutil==6.0.0
+propcache==0.3.0
+psutil==7.0.0
 pyasn1_modules==0.4.1
 pyasn1==0.6.1
 pycparser==2.22
 pycryptodomex==3.21.0
-pyOpenSSL==24.2.1
-pyparsing==3.2.0
+pyOpenSSL==25.0.0
+pyparsing==3.2.1
 pyreadline3==3.5.4
 PyRoxy==1.0b5
 PySocks==1.7.1
-pytest==8.3.3
+pytest==8.3.5
 requests==2.32.3
 requests-toolbelt==1.0.0
-scapy==2.6.0
-selenium==4.25.0
-setuptools==75.1.0
-six==1.16.0
+scapy==2.6.1
+selenium==4.29.0
+setuptools==75.8.2
+six==1.17.0
 sniffio==1.3.1
 socks==0
 socks5==0.2.1
 sortedcontainers==2.4.0
-tomli==2.0.2
+tomli==2.2.1
 transitions==0.9.2
-trio==0.26.2
-trio-websocket==0.11.1
+trio==0.29.0
+trio-websocket==0.12.2
 typing_extensions==4.12.2
 undetected-chromedriver==3.5.5
-urllib3==2.2.3
+urllib3==2.3.0
 websocket-client==1.8.0
-websockets==13.1
-Werkzeug==3.0.4
+websockets==15.0.1
+Werkzeug==3.1.3
 wget==3.2
 wsproto==1.2.0
-yarl==1.15.2
-zipp==3.20.2
+yarl==1.18.3
+zipp==3.21.0
